--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mall?serverTimezone=America/Los_Angeles&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=springboot
+spring.jackson.time-zone=GMT-8
+spring.jackson.date-format=MM-dd-yyyy HH:mm:ss
